--- a/res/xml/preferences.xml
+++ b/res/xml/preferences.xml
@@ -1,5 +1,4 @@
-<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android" >
-
+<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">
     <CheckBoxPreference
         android:defaultValue="false"
         android:key="traditional_units"
@@ -15,6 +14,15 @@
         android:title="@string/pref_title_base_station" android:summaryOn="@string/pref_description_base_station"
         android:summaryOff="@string/pref_description_base_station_off" 
         />
+
+    <CheckBoxPreference
+        android:defaultValue="false"
+        android:key="low_power"
+        android:summary="@string/less_power_summary"
+        android:title="@string/less_power_pref" android:summaryOn="@string/less_power_summary"
+        android:summaryOff="@string/less_power_summary_off"
+        />
+
 	<Preference android:summary="@string/clear_map_tile_cache" android:title="@string/clear_map_cache" android:key="clear_cache"
 	    android:persistent="false"/>
 	            
