--- a/res/xml/preferences.xml
+++ b/res/xml/preferences.xml
@@ -23,7 +23,17 @@
         android:summaryOff="@string/less_power_summary_off"
         />
 
-	<Preference android:summary="@string/clear_map_tile_cache" android:title="@string/clear_map_cache" android:key="clear_cache"
+    <CheckBoxPreference
+        android:defaultValue="true"
+        android:key="logging"
+        android:summary="@string/logging_pref_on"
+        android:title="@string/logging_pref" android:summaryOn="@string/logging_pref_on"
+        android:summaryOff="@string/logging_pref_off"
+        />
+
+
+
+    <Preference android:summary="@string/clear_map_tile_cache" android:title="@string/clear_map_cache" android:key="clear_cache"
 	    android:persistent="false"/>
 	            
 </PreferenceScreen>
