--- a/res/layout-land/main.xml
+++ b/res/layout-land/main.xml
@@ -19,6 +19,9 @@
             android:layout_width="fill_parent"
             android:layout_height="wrap_content"
             android:orientation="vertical"
+            android:paddingEnd="3dp"
+            android:paddingStart="0dp"
+            android:paddingLeft="0dp"
             android:paddingRight="3dp">
 
             <TextView
@@ -96,7 +99,6 @@
                     android:id="@+id/textView"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:layout_marginRight="5sp"
                     android:text="@string/other_lte_sites"
                     android:textColor="@android:color/holo_blue_dark" />
 
@@ -148,7 +150,6 @@
                     android:id="@+id/cdmaSigStrength"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:layout_gravity="left"
                     android:text="@string/no_signal"
                     android:textColor="@android:color/primary_text_dark"
                     android:textIsSelectable="true" />
