--- a/res/layout/main.xml
+++ b/res/layout/main.xml
@@ -28,6 +28,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginRight="5sp"
+                android:layout_marginEnd="5sp"
                 android:text="@string/location"
                 android:textColor="@android:color/primary_text_dark" />
 
@@ -47,6 +48,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginRight="5sp"
+                android:layout_marginEnd="5sp"
                 android:text="@string/speed"
                 android:textColor="@android:color/primary_text_dark" />
 
@@ -68,6 +70,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginRight="5sp"
+                android:layout_marginEnd="5sp"
                 android:text="@string/current_network"
                 android:textColor="@android:color/primary_text_dark" />
 
@@ -87,6 +90,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginRight="5sp"
+                android:layout_marginEnd="5sp"
                 android:text="@string/serving_lte_cell_id"
                 android:textColor="@android:color/primary_text_dark" />
 
@@ -107,6 +111,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginRight="5sp"
+                android:layout_marginEnd="5sp"
                 android:text="@string/other_lte_sites"
                 android:textColor="@android:color/primary_text_dark" />
 
@@ -127,6 +132,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginRight="5sp"
+                android:layout_marginEnd="5sp"
                 android:text="@string/cdma_1xrtt_base_station"
                 android:textColor="@android:color/primary_text_dark" />
 
@@ -147,7 +153,8 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginRight="5sp"
-                android:text="Voice Signal"
+                android:layout_marginEnd="5sp"
+                android:text="@string/voice_signal"
                 android:textColor="@android:color/primary_text_dark" />
 
             <TextView
@@ -169,6 +176,7 @@
         android:layout_height="fill_parent"
         android:layout_alignParentBottom="true"
         android:layout_alignParentLeft="true"
+        android:layout_alignParentStart="true"
         android:layout_below="@+id/TableLayout1"
         android:layout_gravity="bottom" />
 
