--- a/res/menu/mainmenu.xml
+++ b/res/menu/mainmenu.xml
@@ -1,17 +1,19 @@
 <?xml version="1.0" encoding="utf-8"?>
-<menu xmlns:android="http://schemas.android.com/apk/res/android" >
+<menu xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto">
 
-    <item android:id="@+id/settings" 
+    <item
+        android:id="@+id/settings"
         android:icon="@drawable/ic_action_settings"
-        android:showAsAction="ifRoom|withText" 
         android:onClick="launchSettings"
-        android:title="@string/title_activity_settings"></item>
+        android:title="@string/title_activity_settings"
+        app:showAsAction="ifRoom|withText"></item>
 
-        <item
+    <item
         android:id="@+id/exit"
         android:checkable="false"
         android:onClick="exitApp"
-        android:title="@string/exit" 
-        android:showAsAction="ifRoom|withText" />
-    
+        android:title="@string/exit"
+        app:showAsAction="ifRoom|withText" />
+
 </menu>
