--- a/res/layout-land/main.xml
+++ b/res/layout-land/main.xml
@@ -1,19 +1,19 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:mapbox="http://schemas.android.com/apk/res-auto"
     android:id="@+id/root"
     android:layout_width="fill_parent"
     android:layout_height="fill_parent"
     android:layout_gravity="fill"
-    android:background="@android:color/black"
+    android:background="@android:color/white"
     android:gravity="fill"
-    android:orientation="horizontal"
-    android:padding="3dp">
+    android:orientation="horizontal">
 
     <ScrollView
         android:id="@+id/scrollView"
-        android:layout_width="0dp"
+        android:layout_width="0dp" android:padding="3dp"
         android:layout_height="wrap_content"
-        android:layout_weight="2">
+        android:layout_weight="4">
 
         <LinearLayout
             android:layout_width="fill_parent"
@@ -29,13 +29,13 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:text="@string/location"
-                android:textColor="@android:color/holo_blue_dark" />
+                android:textColor="@color/primaryColor" />
 
             <TextView
                 android:id="@+id/positionLatLon"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:textColor="@android:color/primary_text_dark"
+                android:textColor="@android:color/black"
                 android:textIsSelectable="true" />
 
             <TextView
@@ -43,13 +43,13 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:text="@string/speed"
-                android:textColor="@android:color/holo_blue_dark" />
+                android:textColor="@color/primaryColor" />
 
             <TextView
                 android:id="@+id/speed"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:textColor="@android:color/primary_text_dark"
+                android:textColor="@android:color/black"
                 android:textIsSelectable="true" />
 
             <TextView
@@ -57,14 +57,14 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:text="@string/current_network"
-                android:textColor="@android:color/holo_blue_dark" />
+                android:textColor="@color/primaryColor" />
 
             <TextView
                 android:id="@+id/networkString"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:text="@string/none"
-                android:textColor="@android:color/primary_text_dark"
+                android:textColor="@android:color/black"
                 android:textIsSelectable="true" />
 
             <LinearLayout
@@ -78,14 +78,14 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:text="@string/serving_lte_cell_id"
-                    android:textColor="@android:color/holo_blue_dark" />
+                    android:textColor="@color/primaryColor" />
 
                 <TextView
                     android:id="@+id/cellid"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:text="@string/none"
-                    android:textColor="@android:color/primary_text_dark"
+                    android:textColor="@android:color/black"
                     android:textIsSelectable="true" />
             </LinearLayout>
 
@@ -100,14 +100,14 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:text="@string/other_lte_sites"
-                    android:textColor="@android:color/holo_blue_dark" />
+                    android:textColor="@color/primaryColor" />
 
                 <TextView
                     android:id="@+id/otherLteSites"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:text="@string/none"
-                    android:textColor="@android:color/primary_text_dark"
+                    android:textColor="@android:color/black"
                     android:textIsSelectable="true" />
             </LinearLayout>
 
@@ -122,14 +122,14 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:text="@string/cdma_1xrtt_base_station"
-                    android:textColor="@android:color/holo_blue_dark" />
+                    android:textColor="@color/primaryColor" />
 
                 <TextView
                     android:id="@+id/cdma_sysinfo"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:text="@string/none"
-                    android:textColor="@android:color/primary_text_dark"
+                    android:textColor="@android:color/black"
                     android:textIsSelectable="true" />
             </LinearLayout>
 
@@ -144,24 +144,31 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:text="@string/voice_signal"
-                    android:textColor="@android:color/holo_blue_dark" />
+                    android:textColor="@color/primaryColor" />
 
                 <TextView
                     android:id="@+id/cdmaSigStrength"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:text="@string/no_signal"
-                    android:textColor="@android:color/primary_text_dark"
+                    android:textColor="@android:color/black"
                     android:textIsSelectable="true" />
             </LinearLayout>
 
         </LinearLayout>
     </ScrollView>
 
+    <!--
+    <com.mapbox.mapboxsdk.views.MapView
+        android:id="@+id/mapview"
+        android:layout_width="0dp"
+        android:layout_height="fill_parent"
+        android:layout_weight="5"
+        mapbox:mapid="NONE" /> -->
+
     <WebView
         android:id="@+id/leafletView"
         android:layout_width="0dp"
         android:layout_height="fill_parent"
         android:layout_weight="3" />
-
 </LinearLayout>
