--- a/res/values/array.xml
+++ b/res/values/array.xml
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
     <string-array name="mapLayerValues">
+        <item>osm</item>
         <item>shields</item>
         <item>mapquest</item>
         <item>usgs-aerial</item>
@@ -8,6 +9,7 @@
     </string-array>
 
     <string-array name="mapLayers">
+        <item>OSM Default</item>
         <item>OSM Shields</item>
         <item>MapQuest Open (OSM)</item>
         <item>Aerial (USGS/NAIP)</item>
