Add ability to retrieve EARFCN from /dev/smd11
Added SuperSU to gradle.
Display root RSRP output to debug log. Ignore setting for now.

Attempt to make earfcn fetch more reliable

Re-did root EARFCN capture. Now consistently working and reliable.

EARFCN added to display if available.

Template added to logfile. Not enabled currently.

Working preference.

Comment cleanup.

If cat returns with a non 0 exit code ( <0 means some su error, 1 means cat error, such as the file/device doesn't exist), then disable the feature

--- a/res/xml/preferences.xml
+++ b/res/xml/preferences.xml
@@ -56,6 +56,13 @@
         android:title="@string/ta_distance_pref"
         />
 
+    <CheckBoxPreference
+        android:key="earfcn"
+        android:summary="@string/earfcn_pref_off"
+        android:summaryOff="@string/earfcn_pref_off"
+        android:summaryOn="@string/earfcn_pref_on"
+        android:title="@string/earfcn_pref" />
+
     <Preference
         android:key="clear_cache"
         android:persistent="false"
